# rss-news-subscriber

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.example.yaml
specs/name-mapping/: checklist.md  spec.md  tasks.md
specs/wiki-health-check/: checklist.md  spec.md  tasks.md
src/rss_news/: __init__.py
wiki/: config.yaml
wiki/people/: Abbas Araghchi.md  Ahmed al-Sharaa.md  Akira Muto.md  Alex Howard Baker.md  Ali Khamenei.md  Amanda Woo.md  Amir Khan Muttaqi.md  Andrew Tate.md  Anna Breman.md  Anthony Joshua.md  Anutin Charnvirakul.md  Anwar Ibrahim.md  Anya Taylor-Joy.md  Ashley Moody.md  Ayatollah Ali Khamenei.md  Bahrain.md  Bailey Moss.md  Benjamin Netanyahu.md  Bernardo Silva.md  Bo Lingam.md  Brett Guthrie.md  Brian Hooker.md  Caroline Dubois.md  Charlie Day.md  Chris Bowen.md  Chris Pratt.md  Christina Koch.md  Corbin Carroll.md  Cori Close.md  Cory Booker.md  Craig Trojacek.md  Daniel Lurie.md  Daniel Millan.md  Darlene Hamlett.md  Dawn Staley.md  Delcy Rodríguez.md  Deontay Wilder.md  Derek Chan Hoi-chiu.md  Dick Vitale.md  Ditas B Lopez.md  (+135 more)
wiki/political_entities/: ABA.md  AbbVie.md  Al-Aqsa Mosque.md  Apple TV.md  Arizona.md  Associated Press AP.md  Associated Press.md  Austin FC.md  Avalanche.md  BTG Pactual.md  Bahrain.md  Bangkok.md  Bangladesh.md  Bank Mandiri.md  Beijing.md  Big 12.md  Bloomberg News.md  Bloomberg.md  Brazil.md  Cameroon  Africa implied.md  Canada.md  Cathedral Music Trust.md  Chile.md  China Broadnet.md  China Mobile.md  China Telecom.md  China.md  Church of England.md  Colombia.md  Danantara.md  Digimais.md  (+117 more)
(+56 files in other folders)
